<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cement_background"
        android:contentDescription="@string/activity3_wallpaper" />

    <TextView
        android:id="@+id/type_prompt"
        android:layout_width="311dp"
        android:layout_height="126dp"
        android:background="@drawable/button_frame2"
        android:fontFamily="@font/bellefair"
        android:gravity="center"
        android:text="@string/Gym_Strong"
        android:textColor="@color/white"

        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <Button
        android:id="@+id/btn_strength"
        android:layout_width="170dp"
        android:layout_height="80dp"
        android:background="@drawable/button_frame1"
        android:fontFamily="@font/bellefair"
        android:text="@string/btn_strength"


        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.378" />

    <Button
        android:id="@+id/btn_cardio"
        android:layout_width="156dp"
        android:layout_height="75dp"
        android:background="@drawable/button_frame1"
        android:fontFamily="@font/bellefair"
        android:text="@string/btn_cardio"
        android:textSize="20sp"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_strength"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/btn_strength"
        app:layout_constraintTop_toBottomOf="@+id/btn_strength"
        app:layout_constraintVertical_bias="0.41" />

</androidx.constraintlayout.widget.ConstraintLayout>